--- a/templates/base.htm
+++ b/templates/base.htm
@@ -102,7 +102,7 @@
           <a class="brand" href="/">WorkWithMe</a>
           <ul class="nav">
 			<li id="nav_about"><a href="/about">About</a></li>
-			<li id="nav_browse"><a href="/browse">Everyone</a></li>
+			<li id="nav_browse"><a href="/">Map</a></li>
 			{% if user and username %}
 			<li id="nav_me"><a href='/user/{{username}}'>Me</a></li>
 			{% endif %}
