--- a/templates/browse2.htm
+++ b/templates/browse2.htm
@@ -75,6 +75,10 @@
 <p style="margin-top:5px">
 See where everyone is or post your status so that you people know where you are... <a href="/about">Find out more...</a>	
 </p>
+<hr/>
+	<a href='/add'>
+		<button class="btn primary">Update Your Status</button>
+	</a>
 {% endif %}
 
 <hr/>
