Just a general sync

--- a/templates/base.htm
+++ b/templates/base.htm
@@ -69,10 +69,10 @@
 
     </style>
 
-
+   
     <!--
     <link rel="shortcut icon" href="/images/favicon.ico">
-    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+ <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png">
 	 Le fav and touch icons -->
@@ -149,7 +149,7 @@
       </div>
 
       <footer>
-        <p>&copy; WorkWithMe.org 2011</p>
+        <p><a href="http://blog.workwithme.org">Blog</a>  - <a href="http://www.twitter.com/workwithmeorg">@WorkWithMeOrg</a>  - <a href="http://www.facebook.com/pages/WorkWithMeOrg/155936571170082">FaceBook</a>  - &copy; WorkWithMe.org 2011</p>
       </footer>
 
     </div> <!-- /container -->
